@@ -196,7 +196,7 @@
 #if STR71X_UART_2STOP != 0
 #  define STR71X_UARTCR_STOP STR71X_UARTCR_STOPBIT20
 #else
-#  define STR71X_UARTCR_STOP STR71X_UARTCR_STOPBIT05
+#  define STR71X_UARTCR_STOP STR71X_UARTCR_STOPBIT10
 #endif
 
 #define STR71X_UARTCR_VALUE (STR71X_UARTCR_MODE|STR71X_UARTCR_PARITY|STR71X_UARTCR_STOP|\
@@ -212,7 +212,7 @@
  */
 
 #define UART_BAUDDIVISOR (16 * STR71X_UART_BAUD)
-#define UART_BAUDRATE    ((STR71X_PCLK1 + (UART_BAUDDIVISOR/2) / UART_BAUDDIVISOR))
+#define UART_BAUDRATE    ((STR71X_PCLK1 + (UART_BAUDDIVISOR/2)) / UART_BAUDDIVISOR)
 
 /**************************************************************************
  * Private Types
